@@ -2,6 +2,7 @@
 
 	* Fixed 'goto'
 	* Added search.
+	* Added options.
 
 2012-01-23  Valek Filippov <frob@df.ru>
 
